Modified HTML and CSS to fix layout issues.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -18,7 +18,7 @@ body {
 .header {
     clear: both;
     width: 100%;
-    height: 50px;
+    height: 60px;
     background-color: #f8f8f8;
     background: cover;
     border-bottom: 1px solid #bdc3c7;
@@ -28,7 +28,7 @@ body {
     width: 800px;
     height: 576px;
     margin: 0 auto;
-    margin-top: 60px;
+    margin-top: 35px;
     margin-bottom: 20px;
     overflow-y: scroll;
     overflow-x: hidden;
@@ -54,8 +54,7 @@ body {
     position: relative;
     width: 100%;
     float: left;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding: 5px;
     line-height: 2em;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 13px;
@@ -91,14 +90,39 @@ body {
 }
 
 .messages-input {
+    position: relative;
     width: 800px;
     height: 50px;
-    bottom: 0;
+    bottom: 20px;
     margin: 0 auto;
     background: #f8f8f8;
-    border-top: 1px solid #bdc3c7;
+    border-right: 1px solid #bdc3c7;
+    border-bottom: 1px solid #bdc3c7;
+    border-left: 1px solid #bdc3c7;
     display: block;
 }
+
+.button-send-msg {
+    width: 100px;
+    height: 34px;
+    background-color: #333;
+    color: #ffffff;
+    margin: 8px auto 0;
+    line-height: 34px;
+    text-align: center;
+    text-decoration: uppercase;
+    display: inline-block;
+}
+
+.footer {
+    clear: both;
+    height: 100px;
+    width: 100%;
+    margin-top: 60px;
+    background-color: #f8f8f8;
+    border-top: 1px solid #bdc3c7;
+}
+
 
 input {
     width: 400px;
